# platus

./: .gitignore  README.md  changelog.txt  platus.bat  pyproject.toml
assets/: benelux.json  benelux_groot.geo.json  benelux_klein.geo.json  europa.geo.json  europa.json  europa_groot.geo.json  europa_klein.json  wereld_klein.json
src/platus/: __init__.py  __main__.py  bank.py  categorie.py  derden.py  kern.py  lezerschrijver.py  transactie.py
src/platus/gegevens/: __init__.py  __main__.py  bank.py  categorie.py  derden.py  gegevens.py  gereedschap.py  invoer.py  kern.py  lezerschrijver.py  locatie.py  rekening.py  transactie.py  types.py  utils.py
src/platus/rapport/: __init__.py  rapport.py
src/platus/weergave/: __init__.py  paneel.py  weergave.py
